--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@clerk/nextjs": "^4.29.9",
     "@hello-pangea/dnd": "^16.6.0",
     "@hookform/resolvers": "^3.3.4",
+    "@mux/mux-node": "^7.3.1",
+    "@mux/mux-player-react": "^1.14.2",
     "@prisma/client": "^5.11.0",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
