--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "cmdk": "^0.2.0",
     "lucide-react": "^0.363.0",
     "next": "14.1.4",
+    "query-string": "^9.0.0",
     "react": "^18",
     "react-confetti": "^6.1.0",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.2",
+    "react-icons": "^5.0.1",
     "react-quill": "^2.0.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
