--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-hook-form": "^7.51.2",
     "react-icons": "^5.0.1",
     "react-quill": "^2.0.0",
+    "recharts": "^2.12.3",
     "stripe": "^14.23.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
